fixed bug bottom-bar z-index

--- a/src/styles/bottom-bar.scss
+++ b/src/styles/bottom-bar.scss
@@ -13,6 +13,7 @@
     padding: 0 $padding;
     position: fixed;
     width: calc(100% - $padding*2);
+    z-index: 20;
     
     a {
         cursor: pointer;
